# darglint

./: .darglint  .deepsource.toml  .gitignore  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  Pipfile  README.md  README.rst  build.py  pyproject.toml  setup.py  shell.nix  tox.ini
darglint/: config.py  custom_assert.py  darglint.py  doc_parse.py  docstring.py  driver.py  error_report.py  errors.py  example.py  flake8_entry.py  function_description.py  integrity_checker.py  lex.py  new_parse.py  node.py  old_parse.py  parse.py  peaker.py  sphinx_parse.py  strictness.py  token.py  utils.py
docker-build/: Dockerfile.test34  Dockerfile.test35  Dockerfile.test36  Dockerfile.test37  Dockerfile.test38  Dockerfile.test39  Makefile
docs/: Makefile  poster.tex
integration_tests/: analysis_tests.py  compatibility.py  end_to_end.py  goldens.py  grammar_size.py  max_golden_profile.py  performance.py  sources.py  test_flake8.py
tests/: .pydocstyle.ini  integrity_checker_test.py  sphinx_docstrings.py  test_abstract_callable_visitor.py  test_analysis_visitor.py  test_argument_visitor.py  test_assert_visitor.py  test_config.py  test_custom_assert.py  test_cyk.py  test_darglint.py  test_docstring.py  test_docstring_visitor.py  test_error.py  test_error_report.py  test_function_and_method_visitor.py  test_function_description.py  test_function_scoped_visitor.py  test_generated_grammar.py  test_grammar.py  test_identifiers.py  test_integrity_checker.py  test_lex.py  test_long_description_parse.py  test_new_google_parser.py  test_new_parse.py  test_node.py  test_numpy_parser.py  test_parser.py  test_parser_combinator.py  test_peaker.py  test_pure_abstract_analyizer.py  test_pure_abstract_visitor.py  test_utils.py  (+7 more)
(+118 files in other folders)
