[tool.poetry]
name = "darglint"
version = "1.0.0-alpha.1"
description = "A utility for ensuring Google-style docstrings stay up to date with the source code."
authors = ["terrencepreilly <terrencepreilly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.14"
flake8 = "^3.7"
neovim = "^0.3.1"
mypy = "^0.730.0"
pydocstyle = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
