[tool.poetry]
name = "darglint"
version = "1.2.3"
description = "A utility for ensuring Google-style docstrings stay up to date with the source code."
authors = ["terrencepreilly <terrencepreilly@gmail.com>"]
license = "MIT"
keywords = ["documentation", "linter", "development"]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Documentation',
    'Topic :: Software Development :: Quality Assurance',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.5',
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.14"
flake8 = "^3.7"
neovim = "^0.3.1"
mypy = "^0.730.0"
pydocstyle = "^4.0"
twine = "^3.1"

[tool.poetry.scripts]
darglint = "darglint.driver:main"

[tool.poetry.plugins."flake8.extension"]
"DAR" = "darglint.flake8_entry:DarglintChecker"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
